<resources>
    <string name="app_name">Dynamic Load</string>
    <string name="dynamic_testing_android">DynamicTest</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_testing_dynamic">ModuleTitle</string>
    <string name="title_dynamic_testing">Module Title</string>
    <string name="title_dynamic_instant_test">Module Title</string>

    <string name="join_start_meeting">Join/Start Meeting</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="meeting_number">Meeting Number</string>
    <string name="meeting_password">Meeting Password</string>
    <string name="join">Join</string>
    <string name="join_meeting">join meeting</string>
    <string name="start_meeting">start meeting</string>
    <string name="zak">ZAK Token</string>
    <string name="title_on_demond_zoom">Zoom Module</string>
    <string name="title_instant_feature">Instant Module</string>
    <string name="zm_app_name">zm_app_name</string>

    <string name="load_feature_kotlin">Start Dynamic Feature</string>
    <string name="load_feature_java">Start Java Feature</string>
    <string name="load_native_code">Start Native Feature</string>
    <string name="load_assets">Show assets</string>
    <string name="loading">Loading</string>
    <string name="instructions">Press a button to perform an action.</string>
    <string name="install_all_features_now">Install all features now</string>
    <string name="load_all_features_deferred">Load all features deferred</string>
    <string name="install_all_deferred">Install deferred</string>
    <string name="request_uninstall">Request module uninstall</string>
    <string name="mainactivity">MainActivity</string>

</resources>